# xdp

./: CHANGELOG.md  Cargo.toml  README.md  build_ebpf.sh  pp.sh
.cargo/: config.toml
.github/workflows/: ci.yaml
benches/: csum.rs
crates/integ/: Cargo.toml
crates/integ/tests/: proxy.rs  tx_checksum.rs
crates/socket-router/src/: main.c  main.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  netlink.rs
crates/tests/benches/: csum.rs  packet.rs
crates/tests/tests/: csum.rs  packet.rs
src/: bindings.rs  error.rs  frame.rs  lib.rs  libc.rs  mmap.rs  nic.rs  packet.rs  rings.rs  socket.rs  umem.rs
src/frame/: csum.rs  net_types.rs
src/nic/: netlink.rs
src/packet/: csum.rs  net_types.rs
src/rings/: completion.rs  fill.rs  rx.rs  tx.rs
tests/: csum.rs  ping_pong.rs  proxy.rs
